# automatic_lidar_camera_calibration

./: CMakeLists.txt  README.md
cmake/: googletest-download.cmake  googletest.cmake
data/samples/: calibration_handler_param.json  camera_info.json  initial_guess.json  pointcloud.pcd
examples/: CMakeLists.txt  SensorsCalibApp.cpp
include/sensors_calib/: CalibrationHandler.hpp  Constants.hpp  HistogramHandler.hpp  ProbabilityHandler.hpp  TypeConversions.hpp  Types.hpp  sensors_calib.hpp
include/sensors_calib/impl/: CalibrationHandler.ipp  HistogramHandler.ipp
include/sensors_calib/utils/: ParamConfig.hpp  PointCloudFilter.hpp  Utility.hpp  utils.hpp
src/: CMakeLists.txt  CalibrationHandler.cpp  HistogramHandler.cpp  ParamConfig.cpp  ProbabilityHandler.cpp  Types.cpp  Utility.cpp
